bin/testsuite/tests/compiler/src/errors/compiler4611.swg
#global testerror "Err0373"
#test
{
    let x: s32 = undefined
}
